# devcontainer-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
.devcontainer/docs/: README.md  how-to-use.md  issues.md  provided-tools.md  this-dev-container.md
.devcontainer/scripts/: install-pre-commit.sh  post-create.sh  run-bash.sh  run-dev.sh
doc/: doc.md
src/: main.py
tests/: __init__.py  test.py  test_app.py
